--- a/strawberry.org
+++ b/strawberry.org
@@ -28,7 +28,7 @@ Major version log:
     global moga_version
     global mosd_version
     if isempty (strawberry_version)
-      strawberry_version = "2016.07.18 12:21:23";
+      strawberry_version = "2016.07.18 18:10:25";
       mosd_initialise
       moga_initialise
       printf (": STRAWBERRY %s, main function\n", strawberry_version)
@@ -1087,6 +1087,28 @@ strawberry_test
     plot(paretoset(1,:),paretoset(2,:),'- r',z(1,:),z(2,:),' *g')
 #+end_src
 ** three criteria test
+This is simple test of three criteria.  The results can be seen in the following plot which shows the solutions in the Pareto set at the end.
+
+#+begin_src gnuplot :results file :export results :file "strawberry_test3.png"
+  reset
+  unset key
+  set xlabel 'f_1'
+  set ylabel 'f_2'
+  set zlabel 'f_3'
+  set xyplane 0
+  set xrange [4.75:6.6]
+  set xtics 5,0.5
+  set yrange [2.5:5.25]
+  set ytics 3,0.5
+  set zrange [0:6]
+  set ztics 0,2
+  set view 50,280
+  splot 'strawberry_test3.data' with impulses
+#+end_src 
+
+#+results:
+[[file:strawberry_test3.png]]
+
 #+begin_src octave :tangle strawberry_test3.m
   function [x z paretoset] = strawberry_test3
     global esfdebug
@@ -1107,7 +1129,7 @@ strawberry_test
     printf('which has objective %d function values ', length(z0))
     for i=1:length(z0), printf("%f ", z0(i)), endfor; printf("\n")
     ## [x y nf ninf bestgen] = strawberry(x0, a, b, f, ngen, npop, nrmax, ns, population_strategy, output, g)
-    [x z nf ninf bestgen] = strawberry(x0, a, b, f, 100, 20)
+    [x z nf ninf bestgen] = strawberry(x0, a, b, f, 1000, 20)
     paretoset = z(1:3, findpareto(z(1:3,:)));
     [zz indices] = sort(paretoset(1,:));
     paretoset = paretoset(:,indices)
